--- a/estimate_theme/config/optional/block.block.estimate_theme_local_actions.yml
+++ b/estimate_theme/config/optional/block.block.estimate_theme_local_actions.yml
@@ -1,3 +1,4 @@
+uuid: 0fa12ce6-647d-41cf-990d-35ff5306f3d8
 langcode: en
 status: true
 dependencies:
@@ -12,6 +13,6 @@ plugin: local_actions_block
 settings:
   id: local_actions_block
   label: 'Primary admin actions'
-  provider: core
   label_display: '0'
+  provider: core
 visibility: {  }
