--- a/estimate_theme/estimate_theme.libraries.yml
+++ b/estimate_theme/estimate_theme.libraries.yml
@@ -2,3 +2,7 @@ global-styling:
   css:
     theme:
       css/style.css: { }
+      css/forms.css: { }
+      css/menu.css: { }
+      css/fonts.css: { }
+      css/general.css: { }
