--- a/estimate_theme/config/optional/block.block.estimate_theme_breadcrumbs.yml
+++ b/estimate_theme/config/optional/block.block.estimate_theme_breadcrumbs.yml
@@ -1,3 +1,4 @@
+uuid: 4f6c1939-e18a-4514-9a23-47933e20d8eb
 langcode: en
 status: true
 dependencies:
@@ -14,6 +15,6 @@ plugin: system_breadcrumb_block
 settings:
   id: system_breadcrumb_block
   label: Breadcrumbs
-  provider: system
   label_display: '0'
+  provider: system
 visibility: {  }
