--- a/estimate_theme/config/optional/block.block.estimate_theme_help.yml
+++ b/estimate_theme/config/optional/block.block.estimate_theme_help.yml
@@ -1,3 +1,4 @@
+uuid: a3e5f47e-c9ac-4ae4-8e5b-22711b502bc4
 langcode: en
 status: true
 dependencies:
@@ -14,6 +15,6 @@ plugin: help_block
 settings:
   id: help_block
   label: Help
-  provider: help
   label_display: '0'
+  provider: help
 visibility: {  }
