--- a/estimate_theme/config/optional/block.block.estimate_theme_local_tasks.yml
+++ b/estimate_theme/config/optional/block.block.estimate_theme_local_tasks.yml
@@ -1,3 +1,4 @@
+uuid: 9e8c7ab5-1a99-406b-9fd7-098b66cf7197
 langcode: en
 status: true
 dependencies:
@@ -12,8 +13,8 @@ plugin: local_tasks_block
 settings:
   id: local_tasks_block
   label: Tabs
-  provider: core
   label_display: '0'
+  provider: core
   primary: true
   secondary: true
 visibility: {  }
