--- a/estimate_theme/estimate_theme.info.yml
+++ b/estimate_theme/estimate_theme.info.yml
@@ -13,11 +13,15 @@ stylesheets-remove:
   - '@bootstrap5/css/style.css'
 regions:
   header: Header
-  nav_branding: 'Navigation branding region'
-  nav_main: 'Main navigation region'
-  nav_additional: 'Additional navigation region (eg search form, social icons, etc)'
+  navigation_branding: 'Navigation branding region'
+  navigation_main: 'Main navigation region'
+  navigation_additional: 'Additional navigation region'
   breadcrumb: Breadcrumbs
+  title: Title
   content: 'Main content'
   sidebar_first: 'Sidebar first'
   sidebar_second: 'Sidebar second'
-  footer: Footer
+  footer: 'Footer'
+  copyright: 'Copyright'
+logo: images/logo.png
+screenshot: screenshot.png
