--- a/estimate_theme/config/optional/block.block.estimate_theme_page_title.yml
+++ b/estimate_theme/config/optional/block.block.estimate_theme_page_title.yml
@@ -21,4 +21,4 @@ visibility:
   request_path:
     id: request_path
     negate: true
-    pages: "<front> \r\n/user/register\r\n/home-page\r\n/get-support\r\n/contact/contact_us"
+    pages: "<front> \r\n/user/register\r\n/home-page\r\n/get-support\r\n/contact/contact_us\r\n/contact/get_a_demo"
