--- a/estimate_theme/estimate_theme.libraries.yml
+++ b/estimate_theme/estimate_theme.libraries.yml
@@ -6,3 +6,6 @@ global-styling:
       css/menu.css: { }
       css/fonts.css: { }
       css/general.css: { }
+  dependencies:
+      - core/jquery
+      - core/drupal.dialog
